--- a/inbox.html
+++ b/inbox.html
@@ -1,5 +1,1 @@
-<p>&nbsp;</p>
-
-<p><a href="http://tel:0356229084,603065,1">dsdsa</a></p>
-
-<p>+40356229084,603065,1</p>
+<a href="tel:123-456-7890">123-456-7890</a>
