--- a/inbox.html
+++ b/inbox.html
@@ -1,1 +1,2 @@
-<a href="tel:+40356229084,603065,1">APASA AICI</a>
+<h1 style="text-align: center;"><span style="font-size:72px"><a href="tel:+40356229084,603065,1">APASA AICI</a></span>
+</h1>
