--- a/io.html
+++ b/io.html
@@ -12,7 +12,7 @@
 </div>
 <script>
 var d = new Date().getDay();
-var titles = ['title 1', 'title 2', 'title 3', 'title 4', 'title 5', '<a href="tel:+40316301088,,85092060726,,,,,,196208#">SAMBATA 1</a> | <a href="tel:+40316301088,,85092060726,,,,,,196208#">SAMBATA 2</a>', 'title 7'];
+var titles = ['<a href="tel:+40316301088,,000000,,,,,,000000#">LUNI</a>', '<a href="tel:+40316301088,,000000,,,,,,000000#">MARTI</a>', '<a href="tel:+40316301088,,000000,,,,,,000000#">MIERCURI</a>', '<a href="tel:+40316301088,,000000,,,,,,000000#">JOI</a>', '<a href="tel:+40316301088,,000000,,,,,,000000#">VINERI</a>', '<a href="tel:+40316301088,,85092060726,,,,,,196208#">SAMBATA 1</a> | <a href="tel:+40316301088,,000000,,,,,,000000#">SAMBATA 2</a>', '<a href="tel:+40316301088,,000000,,,,,,000000#">DUMINICA</a>'];
 
 document.getElementById("title").innerHTML = titles[d-1];
 </script>
